# shinbi

./: .gitignore  README.md  config.yaml  log.md  pyproject.toml  spec.md
src/: dataset.py  evaluate.py  extract_features.py  model.py  predict.py  preprocess_images.py  split_data.py  train.py
